--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <div class="collapse" id="home">
             <div class="p-5 text-white bg-info">
                 <h2>About me</h2>
-                <h5>Hi, I am Kristijan Kendel, Junior Frontend developer, currently working as CAD/CAM programmer in
+                <h5>Hi, I am Kristijan Kendel, Junior Frontend developer, currently working as a CAD/CAM programmer in
                     Zagreb/Cro. I've
                     always been draw to web development, so few months ago I started reading books (Head first
                     JavaScript and Eloquent JavaScript)and
@@ -111,17 +111,7 @@
                             <li>Respect</li>
                         </ul>
                     </div>
-                    <div class="card-body">
-                        <p>Other</p>
-                        <ul>
-                            <li>Driving licence.....</li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
-                    </div>
+                
                 </div>
             </div>
         </div>
@@ -275,11 +265,9 @@
             <small class="text-white">Copyright © 2019 Object Machinist. All rights reserved.</small>
         </footer>
     </div>
-</body>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script src="project.js"></script>
-
-
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+        <script src="project.js"></script>
+    </body>
 </html>
