--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         <div class="collapse" id="work">
             <div class="p-5 text-white bg-info">
 
-                <h2>Treehouse progress link :<a href> "https://teamtreehouse.com/kristijankenel"</a> </h2>
+                <a href = "https://teamtreehouse.com/kristijankenel", target="_blank" class="btn btn-dark ">Treehouse progress</a>
             </div>
 
             <div class="card card-body">
