Fixes: fixed height of img element.

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
             </div>
             <div class="card card-body">
                 <div class="row justify-content-center">
-                    <div class="col-lg-8 col-md-8 col-12">
+                    <div class="col-lg-8">
                         <p>If you wish to contact me, please do so at <a href="mailto:kriskendel@gmail.com">kriskendel@gmail.com</a></p>
                     </div>
                 </div>
