--- a/index.html
+++ b/index.html
@@ -182,9 +182,7 @@
                 <a href="https://teamtreehouse.com/kristijankenel" target="_blank" class="btn treebtn btn-dark ">
                     Click here
                 </a>
-                <p>This is my treehouse profile. Treehouse or Teamtreehouse is an online technology school that offers beginner to advanced
-                     courses in web design, web development, mobile development and game development taught by team of expert teachers. 
-                     Its courses are aimed at beginners looking to learn coding skills for a career in the tech industry.</p>
+                <p>This is my treehouse profile, here you can see my learning progress in Web developing</p>
             </div>
 
             <div class="card card-body">
