Fix : resp img frame

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row no-gutters ">
                 <div class="col-lg-4 col-md-4 ">
-                    <img src="img/kendel_kristijan_profile.jpg">
+                    <img src="img/kendel_kristijan_profile.jpg" class="image">
                 </div>
                 <div class="col-lg-8 col-md-8">
 
@@ -91,6 +91,7 @@
                             <li>Bootstrap</li>
                             <li>JQuery</li>
                             <li>Git, Github</li>
+                            <li>Responsive</li>
                         </ul>
                     </div>
                     <div class="card-body">
