--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                 <h2></h2>
                 <div class="card-deck">
                     <div class="card-body">
-                        <h4>Random Quote generator</h4>
+                        <h4>Random Quote</h4>
                         <div id="quoteDisplay">
                         </div>
                         <div class="card-body ">
