--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                     learning basics of frontend (HTML,CSS,JavaScript) via Treehouse and recently completed a Frontend Web Development course.
                     Through this course I also learned
                     about JQuery and Bootstrap. I'm eager to learn both frontend and backend!
+                    At this time, Im taking CS50 course at Harvard
                 </p>
             </div>
 
