--- a/index.html
+++ b/index.html
@@ -52,28 +52,30 @@
             </h1>
 
             <p class="mbr-text pb-3 mbr-fonts-style display-5">
-              Front-end Developer and CNC programmer<br /><br />
+              Front-end Developer and CNC programmer<br />
             </p>
 
             <div class="mbr-section-btn">
               <a
-                class="btn btn-md btn-white-outline display-4"
+                class="btn btn-md btn-white display-4"
                 href="index.html#step2-d"
                 >About</a
               >
               <br />
+
               <a
-                class="btn btn-md btn-white-outline display-4"
+                class="btn btn-md btn-white display-4"
                 href="index.html#timeline1-3"
                 >Resume</a
               >
               <a
-                class="btn btn-md btn-white-outline display-4"
+                class="btn btn-md btn-white display-4"
                 href="index.html#gallery1-j"
                 >Projects</a
               >
+              <br />
               <a
-                class="btn btn-md btn-white-outline display-4"
+                class="btn btn-md btn-white display-4"
                 href="index.html#footer2-9"
                 >Contact</a
               >
