--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="row no-gutters ">
                 <div class="col-lg-4 col-md-4 ">
-                    <img src="img/kendel_kristijan_profile.jpg" class="image">
+                    <img src="img/kendel_kristijan_profile.jpg" class="image" alt="profilepic">
                 </div>
                 <div class="col-lg-8 col-md-8">
 
@@ -28,7 +28,6 @@
                                     <a href="https://www.linkedin.com/in/kristijan-kendel-53a685a1/" target="_blank">
                                         <i class="fa fa-linkedin fa-3x text-info"></i>
                                     </a>
-
 
                                     <a href="https://github.com/KrisKendel" target="_blank">
                                         <i class="fa fa-github fa-3x text-info"></i>
@@ -69,9 +68,12 @@
         <div class="collapse" id="home">
             <div class="p-5 text-white bg-info">
                 <h2>About me</h2>
-                <p>Hi, I am Kristijan Kendel, Junior Frontend developer, currently working as a CAD/CAM programmer in Zagreb/Croatia. I've always been drawn to web development, so a few months ago I started reading books (Head first JavaScript and Eloquent
-                    JavaScript) and learning basics of frontend (HTML,CSS,JavaScript) via Treehouse and recently completed a Frontend Web Development course. Through this course I also learned about JQuery and Bootstrap. I'm eager to learn both frontend
-                    and backend! At this time, Im taking CS50 course at Harvard
+                <p>Hi, I am Kristijan Kendel, Junior Frontend developer, currently working as a CAD/CAM programmer in
+                    Zagreb/Croatia. I've always been drawn to web development, so almost one year ago I started reading
+                    books (Head first JavaScript and Eloquent JavaScript) and learning basics of frontend
+                    (HTML,CSS,JavaScript) via Treehouse and recently completed a Frontend Web Development course.
+                    Through this course I also learned about JQuery and Bootstrap. I'm eager to learn both frontend and
+                    backend! At this time, Im taking CS50 course at Harvard
                 </p>
             </div>
 
@@ -89,9 +91,9 @@
                             <li>Git, Github</li>
                             <li>Responsive</li>
                             <li>Scratch</li>
-                            <li> C</li>
-                            <li>Python</li>
-                            <li> Flask</li>
+                            <li> C++ Basics</li>
+                            <li>QML</li>
+
                         </ul>
                     </div>
                     <div class="card-body">
@@ -189,51 +191,67 @@
             <div class="card card-body">
                 <h2>My projects</h2>
                 <ol>
-                    <b><li>Editing post processors</li></b>
-                    <p>Here I used JavaScript to edit post-processors for Inventor(CAD/CAM). Post-processors were intended for CNC milling and lathe machines, I changed machine tool positioning before and after milling/turning to fit their needs, also enabling
-                        additional axis (boolean), I also used Autodesk Fusion 360 Post Processor Utility debugger to see If G-code is as needed etc. This is the first time me facing JavaScript.
-                    </p>
 
-                    <b><li>This Web-page</li></b>
-                    <p>I used basics of HTML, CSS, JavaScript to make my very first Web-page, also I have used Bootstrap, and a little bit of JQuery, Here I learn how to use GitHub and GitHub pages to deploy Web-page. Also it is responsive.
-                    </p>
+                    <li><b>Editing post processors</b>
+
+                        <p>Here I used JavaScript to edit post-processors for Inventor(CAD/CAM). Post-processors were
+                            intended for CNC milling and lathe machines, I changed machine tool positioning before and
+                            after milling/turning to fit their needs, also enabling additional axis (boolean), I also
+                            used Autodesk Fusion 360 Post Processor Utility debugger to see If G-code is as needed etc.
+                            This is the first time me facing JavaScript.
+                        </p>
+                    </li>
+
+                    <li><b>This Web-page</b>
+
+                        <p>I used basics of HTML, CSS, JavaScript to make my very first Web-page, also I have used
+                            Bootstrap, and a little bit of JQuery, Here I learn how to use GitHub and GitHub pages to
+                            deploy Web-page. Also it is responsive.
+                        </p>
+                    </li>
+
+                    <li><b>Forecast Web application</b>
+
+                        <p> 7 day forecast of any Croatian city using only HTML,CSS, JavaScript. Responsive</p>
+                        <div class="proj1"><img src="img/izrezak1.png" alt="project1"> </div>
+
+                    </li>
+
+                    <li><b>Movie Browser</b>
+
+                        <p> Simple movie browser. Learning QML </p>
+                        <div class="proj2"><img src="img/izrezak2.png" alt="project2"></div>
+
+                    </li>
+
                 </ol>
 
-                <div class="row no-gutters">
-                    <div class="col-lg-4 col-md-4"><img src="img/project1.jpg"> </div>
-                    <div class="col-lg-4 col-md-4"><img src="img/project2.jpg"> </div>
-                    <div class="col-lg-4 col-md-4"><img src="img/project1.jpg"> </div>
-                    <div class="col-lg-4 col-md-4"><img src="img/project2.jpg"> </div>
-                </div>
-            </div>
-
-        </div>
-        <div class="collapse" id="contact">
-            <div class="p-5 text-white bg-dark">
-                <h2>Contact</h2>
-            </div>
-            <div class="card card-body">
-                <div class="row justify-content-center">
-                    <div class="col-lg-8">
-                        <p>If you wish to contact me, please do so at <a href="mailto:kriskendel@gmail.com">kriskendel@gmail.com</a></p>
-                    </div>
-                </div>
             </div>
         </div>
 
     </div>
+    <div class="collapse" id="contact">
+        <div class="p-5 text-white bg-dark">
+            <h2>Contact</h2>
+        </div>
+        <div class="card card-body">
+            <div class="row justify-content-center">
+                <div class="col-lg-8">
+                    <p>If you wish to contact me, please do so at <a
+                            href="mailto:kriskendel@gmail.com">kriskendel@gmail.com</a></p>
+                </div>
+            </div>
+        </div>
     </div>
-    </div>
-
     <div class="container">
         <div class="collapse" id="fun">
             <div class="p-5 text-white bg-info">
                 <h2>Just for fun</h2>
-                <h5></h5>
+
             </div>
 
             <div class="card card-header">
-                <h2></h2>
+
                 <div class="card-deck">
                     <div class="card-body">
                         <h4>Random Quote</h4>
@@ -247,8 +265,6 @@
             </div>
         </div>
     </div>
-    </div>
-
     <div class="container">
         <footer class="p-5 bg-dark text-center">
             <small class="text-white">Copyright © 2019 Object Machinist. All rights reserved.</small>
