--- a/index.html
+++ b/index.html
@@ -213,14 +213,14 @@
                     <li><b>Forecast Web application</b>
 
                         <p> 7 day forecast of any Croatian city using only HTML,CSS, JavaScript. Responsive</p>
-                        <div class="proj1"><img src="img/izrezak1.png" alt="project1"> </div>
+                        <div class="proj1"><img src="img/izrezak11.png" alt="project1"> </div>
 
                     </li>
 
                     <li><b>Movie Browser</b>
 
                         <p> Simple movie browser. Learning QML </p>
-                        <div class="proj2"><img src="img/izrezak2.png" alt="project2"></div>
+                        <div class="proj2"><img src="img/izrezak22.png" alt="project2"></div>
 
                     </li>
 
@@ -228,26 +228,33 @@
 
             </div>
         </div>
-
     </div>
-    <div class="collapse" id="contact">
-        <div class="p-5 text-white bg-dark">
-            <h2>Contact</h2>
-        </div>
-        <div class="card card-body">
-            <div class="row justify-content-center">
-                <div class="col-lg-8">
-                    <p>If you wish to contact me, please do so at <a
-                            href="mailto:kriskendel@gmail.com">kriskendel@gmail.com</a></p>
+    <div class="container">
+        <div class="collapse" id="contact">
+            <div class="p-5 text-white bg-dark">
+                <h2>Contact</h2>
+            </div>
+
+            <div class="card card-header">
+
+                <div class="card-deck">
+                    <div class="card-body">
+                        <div class="row justify-content-center">
+                            <div class="col-lg-8">
+                                <p>If you wish to contact me, please do so at <a
+                                        href="mailto:kriskendel@gmail.com">kriskendel@gmail.com</a></p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+
     <div class="container">
         <div class="collapse" id="fun">
             <div class="p-5 text-white bg-info">
                 <h2>Just for fun</h2>
-
             </div>
 
             <div class="card card-header">
@@ -265,6 +272,7 @@
             </div>
         </div>
     </div>
+
     <div class="container">
         <footer class="p-5 bg-dark text-center">
             <small class="text-white">Copyright © 2019 Object Machinist. All rights reserved.</small>
