--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
                             <li>Scratch</li>
                             <li> C++ Basics</li>
                             <li>QML</li>
+                            <li>Angular 8 CLI</li>
 
                         </ul>
                     </div>
@@ -189,7 +190,7 @@
             </div>
 
             <div class="card card-body">
-                <h2>My projects</h2>
+                <h2>My projects - You can visit my github profile to see more..</h2>
                 <ol>
 
                     <li><b>Editing post processors</b>
@@ -213,14 +214,20 @@
                     <li><b>Forecast Web application</b>
 
                         <p> 7 day forecast of any Croatian city using only HTML,CSS, JavaScript. Responsive</p>
-                        <div class="proj1"><img src="img/izrezak11.png" alt="project1"> </div>
+
 
                     </li>
 
                     <li><b>Movie Browser</b>
 
                         <p> Simple movie browser. Learning QML </p>
-                        <div class="proj2"><img src="img/izrezak22.png" alt="project2"></div>
+
+
+                    </li>
+                    <li><b>Channels</b>
+
+                        <p> Simple channels app with API. Learning Angular 8 (CLI) </p>
+
 
                     </li>
 
