--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </div>
 
                         <div class="p-3 text-white bg-black">
-                            <h6>Frontend Developer and CNC Programmer</h6>
+                            <h4>Frontend Developer and CNC Programmer</h4>
                         </div>
 
                         <div class="d-flex flex-lg-row text-center text-white ">
@@ -134,6 +134,19 @@
 
                 <div class="card-deck">
                     <div class="card">
+                        <div class="card-header text-uppercase font-weight-blod">UniqCast</div>
+                        <div class="card-body">
+                            <ul>
+                                <li>Developing standalone video player in Angular 8 CLi</li>
+                                <li>Implementing player in Html Client App </li>
+                                <li>Developing Html Client App</li>
+
+                            </ul>
+                            <p class="bg-dark text-white p-2">Frontend developer</p>
+                        </div>
+                        <div class="card-footer">March 2020 - Present</div>
+                    </div>
+                    <div class="card">
                         <div class="card-header text-uppercase font-weight-blod">Vijcane pumpe</div>
                         <div class="card-body">
                             <ul>
@@ -163,19 +176,7 @@
 
                         <div class="card-footer">April 2014 - August 2017</div>
                     </div>
-                    <div class="card">
-                        <div class="card-header text-uppercase font-weight-blod">Feroimpex</div>
-                        <div class="card-body">
-                            <ul>
-                                <li>Operating with CNC lathe</li>
-                                <li>Reading blueprints</li>
-                                <li>Making high tolerance parts for car industry (bearings)</li>
-                                <li>Basics of CNC programming</li>
-                            </ul>
-                            <p class="bg-dark text-white p-2">CNC Operator</p>
-                        </div>
-                        <div class="card-footer">April 2013 - April 2014</div>
-                    </div>
+
                 </div>
             </div>
         </div>
@@ -183,10 +184,7 @@
         <div class="collapse" id="work">
             <div class="p-5 text-white bg-info">
                 <h2>Projects</h2>
-                <a href="https://teamtreehouse.com/kristijankenel" target="_blank" class="btn treebtn btn-dark ">
-                    Click here
-                </a>
-                <p>This is my treehouse profile, here you can see my learning progress in Web developing</p>
+
             </div>
 
             <div class="card card-body">
@@ -269,12 +267,16 @@
                 <div class="card-deck">
                     <div class="card-body">
                         <h4>Random Quote</h4>
-                        <div id="quoteDisplay">
-                        </div>
+                        <div id="quoteDisplay"></div>
                         <div class="card-body ">
                             <button onclick="newQuote()" class="btn btn-info">New Quote</button>
                         </div>
                     </div>
+                </div>
+                <div class="picture-gallery">
+
+                    <h4>Picture Gallery</h4>
+
                 </div>
             </div>
         </div>
