Updating work expirience

--- a/index.html
+++ b/index.html
@@ -3,28 +3,26 @@
 
 <head>
     <title>Kristijan Kendel | My portfolio</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 
 <body>
     <header>
         <div class="container">
-            <div class="row no-gutters ">
-                <div class="col-lg-4 col-md-4 ">
-                    <img src="img/kendel_kristijan_profile.jpg" class="image" alt="profilepic">
+            <div class="row no-gutters">
+                <div class="col-lg-4 col-md-4">
+                    <img src="img/kendel_kristijan_profile.jpg" class="image" alt="profilepic" />
                 </div>
                 <div class="col-lg-8 col-md-8">
-
                     <div class="d-flex flex-column">
                         <div class="p-5 bg-dark text-white">
                             <div class="hicons d-flex flex-row justify-content-between align-items-center">
                                 <h1 class="display-4"><b>Kristijan Kenđel</b></h1>
                                 <div>
-
                                     <a href="https://www.linkedin.com/in/kristijan-kendel-53a685a1/" target="_blank">
                                         <i class="fa fa-linkedin fa-3x text-info"></i>
                                     </a>
@@ -32,29 +30,33 @@
                                     <a href="https://github.com/KrisKendel" target="_blank">
                                         <i class="fa fa-github fa-3x text-info"></i>
                                     </a>
-
                                 </div>
                             </div>
                         </div>
 
                         <div class="p-3 text-white bg-black">
-                            <h4>Frontend Developer and CNC Programmer</h4>
+                            <h4>Frontend Developer</h4>
                         </div>
 
-                        <div class="d-flex flex-lg-row text-center text-white ">
-                            <div class="pmd-4 pxy-2 bg-info font-div " data-toggle="collapse" data-target="#home">
+                        <div class="d-flex flex-lg-row text-center text-white">
+                            <div class="pmd-4 pxy-2 bg-info font-div main-navigation" data-toggle="collapse"
+                                data-target="#home">
                                 <i class="fa fa-user fa-2x d-block"></i>About
                             </div>
-                            <div class="pmd-4 pxy-2 bg-dark font-div " data-toggle="collapse" data-target="#resume">
+                            <div class="pmd-4 pxy-2 bg-dark font-div main-navigation" data-toggle="collapse"
+                                data-target="#resume">
                                 <i class="fa fa-wrench fa-2x d-block"></i>Resume
                             </div>
-                            <div class="pmd-4 pxy-2 bg-info font-div " data-toggle="collapse" data-target="#work">
+                            <div class="pmd-4 pxy-2 bg-info font-div main-navigation" data-toggle="collapse"
+                                data-target="#work">
                                 <i class="fa fa-folder fa-2x d-block"></i>Work
                             </div>
-                            <div class="pmd-4 pxy-2 bg-dark font-div " data-toggle="collapse" data-target="#contact">
+                            <div class="pmd-4 pxy-2 bg-dark font-div main-navigation" data-toggle="collapse"
+                                data-target="#contact">
                                 <i class="fa fa-envelope fa-2x d-block"></i>Contact
                             </div>
-                            <div class="pmd-4 pxy-2 bg-info font-div " data-toggle="collapse" data-target="#fun">
+                            <div class="pmd-4 pxy-2 bg-info font-div main-navigation" data-toggle="collapse"
+                                data-target="#fun">
                                 <i class="fa fa-smile-o fa-2x d-block"></i>Fun
                             </div>
                         </div>
@@ -68,12 +70,9 @@
         <div class="collapse" id="home">
             <div class="p-5 text-white bg-info">
                 <h2>About me</h2>
-                <p>Hi, I am Kristijan Kendel, Junior Frontend developer, currently working as a CAD/CAM programmer in
-                    Zagreb/Croatia. I've always been drawn to web development, so almost one year ago I started reading
-                    books (Head first JavaScript and Eloquent JavaScript) and learning basics of frontend
-                    (HTML,CSS,JavaScript) via Treehouse and recently completed a Frontend Web Development course.
-                    Through this course I also learned about JQuery and Bootstrap. I'm eager to learn both frontend and
-                    backend! At this time, Im taking CS50 course at Harvard
+                <p>
+                    Hi, I am Kristijan Kenđel, Junior Frontend developer. Currently working as Angular
+                    developer in Zagreb/Croatia
                 </p>
             </div>
 
@@ -86,15 +85,13 @@
                             <li>HTML</li>
                             <li>CSS</li>
                             <li>JavaScript</li>
+                            <li>TypeScript</li>
                             <li>Bootstrap</li>
-                            <li>JQuery</li>
-                            <li>Git, Github</li>
                             <li>Responsive</li>
-                            <li>Scratch</li>
-                            <li> C++ Basics</li>
-                            <li>QML</li>
-                            <li>Angular 8 CLI</li>
-
+                            <li>Git</li>
+                            <li>Angular</li>
+                            <li>Protractor</li>
+                            <li>Docker</li>
                         </ul>
                     </div>
                     <div class="card-body">
@@ -117,7 +114,6 @@
                             <li>Respect</li>
                         </ul>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -125,29 +121,32 @@
         <div class="collapse" id="resume">
             <div class="p-5 text-white bg-dark">
                 <h2>About my work experience</h2>
-                <h5>Quo Vadimus?</h5>
             </div>
 
             <div class="card card-body">
                 <h2>Where have I worked?</h2>
-                <p>My last three jobs:</p>
+                <p>Last three jobs:</p>
 
                 <div class="card-deck">
                     <div class="card">
-                        <div class="card-header text-uppercase font-weight-blod">UniqCast</div>
+                        <div class="card-header text-uppercase font-weight-blod">
+                            UniqCast
+                        </div>
                         <div class="card-body">
                             <ul>
-                                <li>Developing standalone video player in Angular 8 CLi</li>
-                                <li>Implementing player in Html Client App </li>
-                                <li>Developing Html Client App</li>
-
+                                <li>Developing IPTV app with Angular</li>
+                                <li>Developing CSMS app with Angular</li>
+                                <li>Developing E2E tests for Angular apps</li>
+                                <li>Scrum process</li>
                             </ul>
                             <p class="bg-dark text-white p-2">Frontend developer</p>
                         </div>
                         <div class="card-footer">March 2020 - Present</div>
                     </div>
                     <div class="card">
-                        <div class="card-header text-uppercase font-weight-blod">Vijcane pumpe</div>
+                        <div class="card-header text-uppercase font-weight-blod">
+                            Vijcane pumpe
+                        </div>
                         <div class="card-body">
                             <ul>
                                 <li>Programming 4-axis CNC milling machines</li>
@@ -156,13 +155,14 @@
                                 <li>Technology development</li>
                             </ul>
                             <p class="bg-dark text-white p-2">CAD/CAM Programmer</p>
-
                         </div>
 
                         <div class="card-footer">August 2017 - Present</div>
                     </div>
                     <div class="card">
-                        <div class="card-header text-uppercase font-weight-blod">Automehanika</div>
+                        <div class="card-header text-uppercase font-weight-blod">
+                            Automehanika
+                        </div>
                         <div class="card-body">
                             <ul>
                                 <li>Programming 3-axis CNC milling and lathe machines</li>
@@ -171,12 +171,10 @@
                                 <li>Reading blueprints</li>
                             </ul>
                             <p class="bg-dark text-white p-2">CNC Programmer/Machinist</p>
-
                         </div>
 
                         <div class="card-footer">April 2014 - August 2017</div>
                     </div>
-
                 </div>
             </div>
         </div>
@@ -184,53 +182,52 @@
         <div class="collapse" id="work">
             <div class="p-5 text-white bg-info">
                 <h2>Projects</h2>
-
             </div>
 
             <div class="card card-body">
                 <h2>My projects - You can visit my github profile to see more..</h2>
                 <ol>
-
-                    <li><b>Editing post processors</b>
-
-                        <p>Here I used JavaScript to edit post-processors for Inventor(CAD/CAM). Post-processors were
-                            intended for CNC milling and lathe machines, I changed machine tool positioning before and
-                            after milling/turning to fit their needs, also enabling additional axis (boolean), I also
-                            used Autodesk Fusion 360 Post Processor Utility debugger to see If G-code is as needed etc.
+                    <li>
+                        <b>Editing post processors</b>
+                        <p>
+                            Here I used JavaScript to edit post-processors for
+                            Inventor(CAD/CAM). Post-processors were intended for CNC milling
+                            and lathe machines, I changed machine tool positioning before
+                            and after milling/turning to fit their needs, also enabling
+                            additional axis (boolean), I also used Autodesk Fusion 360 Post
+                            Processor Utility debugger to see If G-code is as needed etc.
                             This is the first time me facing JavaScript.
                         </p>
                     </li>
 
-                    <li><b>This Web-page</b>
-
-                        <p>I used basics of HTML, CSS, JavaScript to make my very first Web-page, also I have used
-                            Bootstrap, and a little bit of JQuery, Here I learn how to use GitHub and GitHub pages to
+                    <li>
+                        <b>This Web-page</b>
+                        <p>
+                            I used basics of HTML, CSS, JavaScript to make my very first
+                            Web-page, also I have used Bootstrap, and a little bit of
+                            JQuery, Here I learn how to use GitHub and GitHub pages to
                             deploy Web-page. Also it is responsive.
                         </p>
                     </li>
 
-                    <li><b>Forecast Web application</b>
-
-                        <p> 7 day forecast of any Croatian city using only HTML,CSS, JavaScript. Responsive</p>
-
-
+                    <li>
+                        <b>Forecast Web application</b>
+                        <p>
+                            7 day forecast of any Croatian city using HTML,CSS, JavaScript.
+                            Responsive
+                        </p>
                     </li>
 
-                    <li><b>Movie Browser</b>
+                    <li>
+                        <b>Movie Browser</b>
 
-                        <p> Simple movie browser. Learning QML </p>
-
-
+                        <p>Simple movie browser. Learning QML</p>
                     </li>
-                    <li><b>Channels</b>
-
-                        <p> Simple channels app with API. Learning Angular 8 (CLI) </p>
-
-
+                    <li>
+                        <b>Chat App</b>
+                        <p>Incognito Chat app with Angular 9 and Angular Material</p>
                     </li>
-
                 </ol>
-
             </div>
         </div>
     </div>
@@ -241,13 +238,14 @@
             </div>
 
             <div class="card card-header">
-
                 <div class="card-deck">
                     <div class="card-body">
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
-                                <p>If you wish to contact me, please do so at <a
-                                        href="mailto:kriskendel@gmail.com">kriskendel@gmail.com</a></p>
+                                <p>
+                                    If you wish to contact me, please do so at
+                                    <a href="mailto:kriskendel@gmail.com">kriskendel@gmail.com</a>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -263,20 +261,19 @@
             </div>
 
             <div class="card card-header">
-
                 <div class="card-deck">
                     <div class="card-body">
                         <h4>Random Quote</h4>
                         <div id="quoteDisplay"></div>
-                        <div class="card-body ">
-                            <button onclick="newQuote()" class="btn btn-info">New Quote</button>
+                        <div class="card-body">
+                            <button onclick="newQuote()" class="btn btn-info">
+                                New Quote
+                            </button>
                         </div>
                     </div>
                 </div>
                 <div class="picture-gallery">
-
                     <h4>Picture Gallery</h4>
-
                 </div>
             </div>
         </div>
