--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </div>
 
                         <div class="p-3 text-white bg-black">
-                            <h4>Frontend Developer</h4>
+                            <h4>Junior Frontend Developer</h4>
                         </div>
 
                         <div class="d-flex flex-lg-row text-center text-white">
