Updating work expirience

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="container">
             <div class="row no-gutters">
-                <div class="col-lg-4 col-md-4">
+                <div class="col-lg-4 col-md-4" style="background: #343a40;">
                     <img src="img/kendel_kristijan_profile.jpg" class="image" alt="profilepic" />
                 </div>
                 <div class="col-lg-8 col-md-8">
@@ -35,7 +35,7 @@
                         </div>
 
                         <div class="p-3 text-white bg-black">
-                            <h4>Junior Frontend Developer</h4>
+                            <h4>Frontend Developer</h4>
                         </div>
 
                         <div class="d-flex flex-lg-row text-center text-white">
@@ -71,7 +71,7 @@
             <div class="p-5 text-white bg-info">
                 <h2>About me</h2>
                 <p>
-                    Hi, I am Kristijan Kenđel, Junior Frontend developer. Currently working as Angular
+                    Hi, I am Kristijan Kenđel, Frontend developer. Currently working as Angular
                     developer in Zagreb/Croatia
                 </p>
             </div>
@@ -80,7 +80,7 @@
                 <h2>My Skills</h2>
                 <div class="card-deck">
                     <div class="card-body">
-                        <p><b>Junior Frontend Developer</b></p>
+                        <p><b>Frontend Developer</b></p>
                         <ul>
                             <li>HTML</li>
                             <li>CSS</li>
@@ -92,6 +92,8 @@
                             <li>Angular</li>
                             <li>Protractor</li>
                             <li>Docker</li>
+                            <li>SQL Management Studio</li>
+                            <li>Altova Umodel</li>
                         </ul>
                     </div>
                     <div class="card-body">
@@ -130,6 +132,19 @@
                 <div class="card-deck">
                     <div class="card">
                         <div class="card-header text-uppercase font-weight-blod">
+                            Matrica Company
+                        </div>
+                        <div class="card-body">
+                            <ul>
+                                <li>Developing bussines apps in Angular</li>
+                            </ul>
+                            <p class="bg-dark text-white p-2">Frontend developer</p>
+                        </div>
+
+                        <div class="card-footer">November 2020 - Present</div>
+                    </div>
+                    <div class="card">
+                        <div class="card-header text-uppercase font-weight-blod">
                             UniqCast
                         </div>
                         <div class="card-body">
@@ -141,7 +156,7 @@
                             </ul>
                             <p class="bg-dark text-white p-2">Frontend developer</p>
                         </div>
-                        <div class="card-footer">March 2020 - Present</div>
+                        <div class="card-footer">March 2020 - November 2020</div>
                     </div>
                     <div class="card">
                         <div class="card-header text-uppercase font-weight-blod">
@@ -157,23 +172,7 @@
                             <p class="bg-dark text-white p-2">CAD/CAM Programmer</p>
                         </div>
 
-                        <div class="card-footer">August 2017 - Present</div>
-                    </div>
-                    <div class="card">
-                        <div class="card-header text-uppercase font-weight-blod">
-                            Automehanika
-                        </div>
-                        <div class="card-body">
-                            <ul>
-                                <li>Programming 3-axis CNC milling and lathe machines</li>
-                                <li>Setting up machines</li>
-                                <li>Technology development</li>
-                                <li>Reading blueprints</li>
-                            </ul>
-                            <p class="bg-dark text-white p-2">CNC Programmer/Machinist</p>
-                        </div>
-
-                        <div class="card-footer">April 2014 - August 2017</div>
+                        <div class="card-footer">August 2017 - March 2020</div>
                     </div>
                 </div>
             </div>
@@ -281,7 +280,7 @@
 
     <div class="container">
         <footer class="p-5 bg-dark text-center">
-            <small class="text-white">Copyright © 2019 Object Machinist. All rights reserved.</small>
+            <small class="text-white">Copyright © 2020 Object Machinist. All rights reserved.</small>
         </footer>
     </div>
 
