--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </div>
 
                         <div class="p-3 text-white bg-black">
-                            <h4>Frontend Developer</h4>
+                            <h2>Frontend Developer</h2>
                         </div>
 
                         <div class="d-flex flex-lg-row text-center text-white">
@@ -218,9 +218,9 @@
                     </li>
 
                     <li>
-                        <b>Movie Browser</b>
+                        <b>Book Rent app</b>
 
-                        <p>Simple movie browser. Learning QML</p>
+                        <p>Angular app combined with Json-server</p>
                     </li>
                     <li>
                         <b>Chat App</b>
