--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Chat Application</h2>
+                    <h2 class="w-title">Chat App</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Angular 10 | C# | SQL</span> / <span class="w-date">Jan 2021</span>
                     </div>
@@ -302,7 +302,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Book Rent Application</h2>
+                    <h2 class="w-title">Book Rent App</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Angular 9 | JSON-Server</span> / <span class="w-date">Nov 2020</span>
                     </div>
